--- a/package.json
+++ b/package.json
@@ -25,14 +25,7 @@
   "homepage": "https://github.com/nxus/app-boilerplate#readme",
   "dependencies": {
     "forever": "^0.15.1",
-    "nxus-base-ui": "^3.0.0-0",
-    "nxus-core": "^3.0.0-0",
-    "nxus-data-loader": "^3.0.0-0",
-    "nxus-renderer": "^3.0.0-0",
-    "nxus-router": "^3.0.0-0",
-    "nxus-storage": "^3.0.0-0",
-    "nxus-templater": "^3.0.0-0",
-    "nxus-tester": "^3.0.0-0"
+    "nxus-core": "^4.0.0-0"
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
