--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "homepage": "https://github.com/nxus/app-boilerplate#readme",
   "dependencies": {
+    "babel-plugin-transform-class-properties": "^6.11.5",
+    "babel-plugin-transform-function-bind": "^6.8.0",
     "forever": "^0.15.1",
     "nxus-core": "^4.0.0-0"
   },
