--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "babel-plugin-transform-function-bind": "^6.8.0",
     "forever": "^0.15.1",
     "nxus-core": "^4.0.0-0",
-    "nxus-router": "^4.0.0-0"
+    "nxus-router": "^4.0.0-0",
+    "nxus-templater": "^4.0.0-0"
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
