A simple use of MVCModule and Controller

--- a/.nxusrc
+++ b/.nxusrc
@@ -8,7 +8,8 @@
     },
     "connections": {
       "default": {
-        "adapter": "default"
+        "adapter": "default",
+        "filename": "tmp.db"
       }
     }
   },
