--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "forever": "^0.15.1",
     "nxus-core": "^4.0.0-0",
     "nxus-router": "^4.0.0-0",
-    "nxus-templater": "^4.0.0-0"
+    "nxus-storage": "^4.0.0-0",
+    "nxus-templater": "^4.0.0-0",
+    "nxus-web": "^4.0.0-0"
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
