--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "scripts": {
     "dev": "if [ ! $DEBUG ]; then export DEBUG=nxus:*; fi; npm start",
+    "prod": "npm run build && NODE_ENV=production DEBUG=nxus:* DEBUG_LEVEL=info npm start",
     "start": "node index.js",
     "test": "NODE_ENV=test mocha --recursive --compilers js:babel-core/register -R spec modules/**/test/* ",
     "pretest": "forever stopall && NODE_ENV=test PORT=3002 forever -o test.log -e test.log start index.js && sleep 15",
-    "posttest": "forever stop index.js"
+    "posttest": "forever stop index.js",
+    "build": "babel modules -d lib --copy-files --ignore theme/assets"
   },
   "repository": {
     "type": "git",
@@ -28,6 +30,8 @@
     "babel-plugin-transform-class-properties": "^6.11.5",
     "babel-plugin-transform-function-bind": "^6.8.0",
     "forever": "^0.15.1",
+    "idle-gc": "^1.0.1",
+    "nxus-clientjs": "^4.0.0-0",
     "nxus-core": "^4.0.0-0",
     "nxus-router": "^4.0.0-0",
     "nxus-storage": "^4.0.0-0",
