--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,8 @@
 {
   "presets": ["es2015"],
-  "plugins": ["transform-function-bind", "transform-class-properties"]
+  "plugins": [
+    "transform-function-bind",
+    "transform-class-properties",
+    "transform-object-rest-spread"
+  ]
 }
