--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
   },
   "homepage": "https://github.com/nxus/app-boilerplate#readme",
   "dependencies": {
+    "babel-core": "^6.9.0",
+    "babel-cli": "^6.9.0",
     "babel-plugin-transform-class-properties": "^6.11.5",
     "babel-plugin-transform-function-bind": "^6.8.0",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "babel-preset-es2015": "^6.9.0",
     "forever": "^0.15.1",
     "nxus-clientjs": "^4.0.0-1",
     "nxus-core": "^4.0.0-0",
@@ -42,14 +45,11 @@
     "nxus-web": "^4.0.0-0"
   },
   "devDependencies": {
-    "babel-core": "^6.9.0",
     "mocha": "^2.2.5",
     "should": "^7.0.2",
     "sinon": "^1.17.2",
     "chai": "^3.5.0",
     "documentation": "^4.0.0-beta",
-    "chai-as-promised": "^5.2.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-cli": "^6.9.0"
+    "chai-as-promised": "^5.2.0"
   }
 }
