--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,8 @@
 {
-  "presets": ["es2015"],
   "plugins": [
     "transform-function-bind",
     "transform-class-properties",
-    "transform-object-rest-spread"
+    "transform-object-rest-spread",
+    "transform-es2015-modules-commonjs"
   ]
 }
