--- a/.nxusrc
+++ b/.nxusrc
@@ -15,7 +15,7 @@
   "sendgrid": {
     "disabled": true
   },
-  "worker-queue": {
+  "worker_queue": {
     "redis_url": "redis://localhost:6379"
   },
   "client_js": {
